fixed spacing issue on software projects

--- a/src/app/software-project/software-project.component.css
+++ b/src/app/software-project/software-project.component.css
@@ -14,10 +14,10 @@
     padding: 2px;
 }
 
-app-project {
+.appProject {
     display: flex;
     flex-wrap: wrap;
-    flex: 1;
+    max-width: 78%;
     margin: 1rem;
     padding: 1rem;
     border-radius: 1rem;
@@ -28,6 +28,9 @@ app-project {
 
 @media only screen and (min-width: 600px){
   
+    .appProject{
+        max-width: 30%;
+    }
 
 }
 
@@ -47,7 +50,6 @@ app-project {
         flex-wrap: wrap;
         width: 100%;
         margin-left: 3.5rem;
-        margin-bottom: 20rem;
     }
 }
 
@@ -59,7 +61,6 @@ app-project {
         flex-wrap: wrap;
         width: 100%;
         margin: 0 auto;
-        margin-bottom: 29rem;
     }
 
 }
